--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     },
     "dependencies": {
         "@inertiajs/inertia": "^0.11.1",
+        "html2canvas": "^1.4.1",
+        "jspdf": "^3.0.1",
         "ziggy-js": "^1.0.0"
     }
 }
