--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=VentasPlus
 APP_ENV=local
 APP_KEY=base64:QGXCu+BQfWBWg9TJ50P12XkItuAO8J18eKtTmiCE7GA=
 APP_DEBUG=true
@@ -13,7 +13,7 @@ DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_DATABASE=ventasplus
 DB_USERNAME=postgres
-DB_PASSWORD=Angie0254
+DB_PASSWORD=camilodev1993
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
