--- a/.gitignore
+++ b/.gitignore
@@ -8,12 +8,97 @@
 .env
 .env.backup
 .env.production
+.env.local
+.env.*.local
 .phpunit.result.cache
 Homestead.json
 Homestead.yaml
 auth.json
 npm-debug.log
-yarn-error.log
+yarn-debug.log*
+yarn-error.log*
 /.fleet
 /.idea
 /.vscode
+/.vagrant
+.DS_Store
+*.log
+*.sqlite
+*.sqlite-journal
+.phpstorm.meta.php
+_ide_helper.php
+_ide_helper_models.php
+.php_cs.cache
+.php-cs-fixer.cache
+.phpunit.cache/
+
+# Compiled output
+/dist
+/dist-ssr
+/tmp
+/out-tsc
+/bazel-out
+
+# Node
+/.pnp
+.pnp.js
+.npm
+.yarn-integrity
+
+# IDEs and editors
+*.launch
+*.sublime-workspace
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# Visual Studio Code
+.history/*
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# Miscellaneous
+/.sass-cache
+/connect.lock
+/coverage
+/libpeerconnection.log
+testem.log
+/typings
+*.tsbuildinfo
+
+# Laravel Mix
+/public/css
+/public/js
+/public/mix-manifest.json
+
+# Bootstrap cache
+/bootstrap/cache/*
+!bootstrap/cache/.gitkeep
+
+# Laravel storage
+/storage/framework/cache/*
+/storage/framework/sessions/*
+/storage/framework/testing/*
+/storage/framework/views/*
+/storage/logs/*
+!/storage/framework/cache/.gitkeep
+!/storage/framework/sessions/.gitkeep
+!/storage/framework/testing/.gitkeep
+!/storage/framework/views/.gitkeep
+!/storage/logs/.gitkeep
+
+# Uploaded files
+/storage/app/public/*
+!/storage/app/public/.gitkeep
+
+# Local SSL certificates
+*.pem
+*.crt
+*.key
+*.csr
