--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.7",
+        "league/csv": "9.8",
         "spatie/laravel-permission": "^6.17",
         "tightenco/ziggy": "^1.0"
     },
